# haptic-vst

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD.md  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  RUST_BUILD_GUIDE.md  TESTING.md  haptic-vst-minimal-prototype.md  haptic.toml
docs/: code-review-remediation-plan.md  composition.md  doppler-delay-line-design.md  learnings.md  syllabary-protocol.md  travelling-wave-implementation-plan.md  travelling-wave.md  wave-orbit-dsp-analysis.md  wave.md
docs/planning/: README.md  hybrid-architecture-plan.md  implementation-plan-single-plugin.md  project-outline.md  static-allocation-architecture.txt
haptic-plugin/: Cargo.toml  build.rs
haptic-plugin-standalone/: Cargo.toml
haptic-plugin-standalone/src/: main.rs
haptic-plugin/src/: editor.rs  ipc_client.rs  lib.rs
haptic-protocol/: Cargo.toml
haptic-protocol/src/: lib.rs
haptic-server/: Cargo.toml
haptic-server/src/: audio.rs  config.rs  engine.rs  ipc.rs  main.rs  output_analysis.rs
haptic-viewer/: Cargo.toml
haptic-viewer/src/: main.rs
tools/: analyze_f32_capture.rs  test_note.py
xtask/: Cargo.toml
xtask/src/: main.rs
