[package]
name = "haptic-plugin-standalone"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "haptic-plugin-standalone"

[dependencies]
haptic_plugin = { path = "../haptic-plugin", package = "haptic-plugin", features = ["standalone"] }
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["standalone"] }