[package]
name = "haptic-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["vst3"] }
nih_plug_egui = { git = "https://github.com/robbert-vdh/nih-plug.git" }
haptic-protocol = { path = "../haptic-protocol" }
serde = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }

[build-dependencies]
nih_plug_xtask = { git = "https://github.com/robbert-vdh/nih-plug.git" }