[package]
name = "haptic-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "haptic-plugin-standalone"
required-features = ["standalone"]

[features]
default = []
standalone = ["nih_plug/standalone"]


[dependencies]
nih_plug = { git = "https://github.com/jmz1/nih-plug.git", features = ["vst3", "standalone"] }
nih_plug_egui = { git = "https://github.com/jmz1/nih-plug.git" }
haptic-protocol = { path = "../haptic-protocol" }
serde = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
ctor = "0.2"

[build-dependencies]
nih_plug_xtask = { git = "https://github.com/jmz1/nih-plug.git" }