[package]
name = "haptic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
haptic-protocol = { path = "../haptic-protocol" }
serde = { workspace = true }
bincode = { workspace = true }
crossbeam-channel = { workspace = true }
parking_lot = { workspace = true }
rtrb = { workspace = true }
cpal = "0.15"
ctrlc = "3.4"